added styling and links

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <title> Derek's Geovisualization Portfolio </title>
 
+  <link href="css/styles.css" rel="stylesheet"
 </head>
 <body>
   <h1> Geovisualizashun Portfolio </h1>
   <p> Blah blah blah. </p>
 
+  <p> <a href="http://youtube.com"> my personal website </a> </p>
+
+  <p> <img src="images/CRP_by_county.jpg"  /> </p>
 </body>
 
 </html>
